--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -17,7 +17,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png" alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
                     <li><a href="./how-to.html">How To</a></li>
@@ -90,7 +90,7 @@
             <div class="team-list">
                 <!-- individual cards: Ian Gonsher -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/ian-gonsher.jpg" alt="Ian Gonsher">
+                    <img class="team-pic" src="./pictures/profiles/IanGonsher.jpg" alt="Ian Gonsher">
                     <h2 class="name">Ian Gonsher</h2>
                     <p class="card-text">Ian Gonsher is Assistant Professor of Practice in the School of Engineering
                         and Department of Computer Science at Brown University. His teaching and
@@ -102,7 +102,7 @@
 
                 <!-- Alara Kalfazade -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/AlaraKalfazade.jpg" alt="Alara Kalfazade">
+                    <img class="team-pic" src="./pictures/profiles/AlaraKalfazade.jpg" alt="Alara Kalfazade">
                     <h2 class="name">Alara Kalfazade</h2>
                     <p class="card-text">Alara Kalfazade is a senior at Brown University studying Computer Science-Economics. She is from Istanbul, Turkey. 
                         She is passionate about UI/UX and graphic design. 
@@ -112,7 +112,7 @@
 
                 <!-- Catherina Niu -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/CatherinaNiu.JPEG" alt="Catherina Niu">
+                    <img class="team-pic" src="./pictures/profiles/CatherinaNiu.JPEG" alt="Catherina Niu">
                     <h2 class="name">Catherina Niu</h2>
                     <p class="card-text">Catherina Niu is a senior at Brown University studying APMA-CS and Economics.
                         Catherina is from Shanghai, China and Canada. A fun fact about her is that she practices Brazilian Jiu Jitsu.
@@ -121,7 +121,7 @@
 
                 <!-- Jose Sandoval -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/Jose.jpg" alt="Jose Sandoval">
+                    <img class="team-pic" src="./pictures/profiles/JoseSandoval.jpg" alt="Jose Sandoval">
                     <h2 class="name">Jose Sandoval</h2>
                     <p class="card-text">Jose Sandoval is Brown University student studying computer science and Portuguese 
                         and Brazilian Studies. He is passionate about information security and the intersection of social 
@@ -132,7 +132,7 @@
 
                 <!-- Katie Lynch -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/KatieLynch.jpg" alt="Katie Lynch">
+                    <img class="team-pic" src="./pictures/profiles/KatieLynch.jpg" alt="Katie Lynch">
                     <h2 class="name">Katie Lynch</h2>
                     <p class="card-text">Katie Lynch holds a BFA in Industrial Design from SCAD and 
                         is currently pursuing her MA in Design Engineering from RISD and Brown in a dual 
@@ -144,7 +144,7 @@
 
                 <!-- Vivian Li -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/Vivian Li.jpg" alt="Vivian Li">
+                    <img class="team-pic" src="./pictures/profiles/VivianLi.jpg" alt="Vivian Li">
                     <h2 class="name">Vivian Li</h2>
                     <p class="card-text">Vivian Li
                     </p>
