--- a/Web Page1.0/gallery.html
+++ b/Web Page1.0/gallery.html
@@ -15,7 +15,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png"
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
@@ -55,19 +55,19 @@
         <h1 class="title" style="color: #fff;">Featured This Week</h1>
         <div id="featured">
             <div class="featured-item">
-                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <img class="featured-pic" src="./pictures/start_page/image.png" alt="Project Title, John D. - School - Grade X"/>
                 <h2 class="featured-title">Project Title</h2>
                 <p class="featured-text">John D. - School - Grade X</p>
                 <p class="featured-text">Rhode Island</p>
             </div>
             <div class="featured-item">
-                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <img class="featured-pic" src="./pictures/start_page/image.png" alt="Project Title, John D. - School - Grade X"/>
                 <h2 class="featured-title">Project Title</h2>
                 <p class="featured-text">John D. - School - Grade X</p>
                 <p class="featured-text">Rhode Island</p>
             </div>
             <div class="featured-item">
-                <img class="featured-pic" src="./pictures/start page/image.png" alt="Project Title, John D. - School - Grade X"/>
+                <img class="featured-pic" src="./pictures/start_page/image.png" alt="Project Title, John D. - School - Grade X"/>
                 <h2 class="featured-title">Project Title</h2>
                 <p class="featured-text">John D. - School - Grade X</p>
                 <p class="featured-text">Rhode Island</p>
@@ -81,50 +81,50 @@
             style="margin:30px 10%; padding-left: 0; padding-right: 0;margin-top: 0; background: #F5F5F5;">
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt=""/>
+                    <img class="myImg" src="./pictures/start_page/image.png" alt=""/>
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
 
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
                 </li>
                 <li class="image-gallery-item">
-                    <img class="myImg" src="./pictures/start page/image.png" alt="" />
+                    <img class="myImg" src="./pictures/start_page/image.png" alt="" />
                     <div class="description">
                         <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
                     </div>
