--- a/Web Page1.0/lesson-a.html
+++ b/Web Page1.0/lesson-a.html
@@ -15,7 +15,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png"
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
@@ -71,9 +71,9 @@
                     <h2 class="activity-sub-title"></h2>
                     <div class="tool-logos">
                         <a href="https://www.tinkercad.com/" target="_blank"><img class="item-pic"
-                                src="./pictures/start page/tinkercad-logo.png" /></a>
+                                src="./pictures/resources/tinkercad-logo.png" /></a>
                                 <a href="https://www.tinkercad.com/" target="_blank"><img class="item-pic"
-                                    src="./pictures/start page/autodesk-fusion-360-logo.png" /></a>
+                                    src="./pictures/resources/autodeskFusion360-logo.png" /></a>
                     </div>
                 </div>
             </div>
@@ -144,16 +144,16 @@
                     <h2 class="instructions-sub-title" style="text-align:center;">Reference Images</h2>
                     <ul class="image-gallery">
                         <li class="image-gallery-item">
-                            <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                            <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                         </li>
                         <li class="image-gallery-item">
-                            <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                            <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
                         </li>
                         <li class="image-gallery-item">
-                            <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                            <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                         </li>
                         <li class="image-gallery-item">
-                            <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                            <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                         </li>
                     </ul>
                 </div>
