--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -38,7 +38,7 @@
             <h2 id="fs-title">Form Selection</h2>
             <div id="fs-content-container">
                 <div id="fs-curvedvolume" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" 
+                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
                     alt="Sample of the curved volume form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Curved Volume</h3>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div id="fs-foursidedcube" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/fourSideCubeBunny 1.png" 
+                    <img class="fs-pic"src="./pictures/start_page/fourSideCubeBunny 1.png" 
                     alt="Sample of the four sided cube form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Four-Sided Cube</h3>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div id="fs-sixsidedcube"  class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" 
+                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Six-Sided Cube</h3>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div id="fs-cylinderelement" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" 
+                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Cylinder</h3>
@@ -70,28 +70,28 @@
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
@@ -128,7 +128,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png"
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
@@ -296,22 +296,22 @@
             <h1 class="title">OTHER FORMS</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
             </ul>
         </div>
@@ -352,17 +352,17 @@
         <div id="workflow">
             <div class="work-item">
                 <h2 class="work-item-title">Upload</h2>
-                <img class="work-item-pic" src="./pictures/start page/upload.png" />
+                <img class="work-item-pic" src="./pictures/start_page/upload.png" />
                 <p class="work-item-text">Upload any .STL file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Modify</h2>
-                <img class="work-item-pic" src="./pictures/start page/modify.png" />
+                <img class="work-item-pic" src="./pictures/start_page/modify.png" />
                 <p class="work-item-text">Modify your selections to best fit the shape of your file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Download</h2>
-                <img class="work-item-pic" src="./pictures/start page/download.png" />
+                <img class="work-item-pic" src="./pictures/start_page/download.png" />
                 <p class="work-item-text">Download your .PDF to print.</p>
             </div>
         </div>
@@ -373,22 +373,22 @@
             <h1 class="title">Gallery</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
             </ul>
         </div>
