--- a/Web Page1.0/how-to.html
+++ b/Web Page1.0/how-to.html
@@ -17,7 +17,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png"
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
@@ -127,17 +127,17 @@
         <div id="workflow">
             <div class="work-item">
                 <h2 class="work-item-title">Upload</h2>
-                <img class="work-item-pic" src="./pictures/start page/upload.png" />
+                <img class="work-item-pic" src="./pictures/start_page/upload.png" />
                 <p class="work-item-text">Upload any .STL file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Modify</h2>
-                <img class="work-item-pic" src="./pictures/start page/modify.png" />
+                <img class="work-item-pic" src="./pictures/start_page/modify.png" />
                 <p class="work-item-text">Modify your selections to best fit the shape of your file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Download</h2>
-                <img class="work-item-pic" src="./pictures/start page/download.png" />
+                <img class="work-item-pic" src="./pictures/start_page/download.png" />
                 <p class="work-item-text">Download your .PDF to print.</p>
             </div>
         </div>
@@ -149,16 +149,16 @@
             <h1 class="title">Additional Examples</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
                 </li>
             </ul>
             <a class = "gallery gallery-nav" href="./gallery.html"><button class="view-more-button">View More</button></a>
