more picutre changes

--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -38,7 +38,7 @@
             <h2 id="fs-title">Form Selection</h2>
             <div id="fs-content-container">
                 <div id="fs-curvedvolume" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" 
                     alt="Sample of the curved volume form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Curved Volume</h3>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div id="fs-foursidedcube" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start_page/fourSideCubeBunny 1.png" 
+                    <img class="fs-pic"src="./pictures/samples/fourSideCube-Bunny-sample.png" 
                     alt="Sample of the four sided cube form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Four-Sided Cube</h3>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div id="fs-sixsidedcube"  class="fs-item">
-                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
+                    <img class="fs-pic"src="./pictures/samples/fourSideCube-Bunny-sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Six-Sided Cube</h3>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div id="fs-cylinderelement" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start_page/curved_Bunny_sample.png" 
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Cylinder</h3>
@@ -70,28 +70,28 @@
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
@@ -296,22 +296,22 @@
             <h1 class="title">OTHER FORMS</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
+                    <img src="./pictures/samples/fourSideCube-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
             </ul>
         </div>
@@ -373,22 +373,22 @@
             <h1 class="title">Gallery</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/fourSideCubeBunny.png" alt="Bunny stl displayed in the four sided cube form." />
+                    <img src="./pictures/samples/fourSideCube-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/samples/curved_Bunny_sample.png" alt=" Bunny stl displayed in the curved volume form." />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
             </ul>
         </div>
