it works - video

--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -53,23 +53,23 @@
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
-                <div id="fs-sixsidedcube"  class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/fourSideCube-Bunny-sample.png" 
+                <div id="fs-sixsidedtwoflapscube"  class="fs-item">
+                    <img class="fs-pic"src="./pictures/samples/sixSidedCube-Bunny-sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Six-Sided Cube</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
-                <div id="fs-cylinderelement" class="fs-item">
-                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" 
+                <div id="fs-sixsidedfourflapscube" class="fs-item">
+                    <img class="fs-pic"src="./pictures/samples/sixSidedCube-Bunny-sample.png" 
                     alt="Sample of the six sided cube form. Displaying a _ stl."/>
                     <div class="fs-text">
                         <h3 class="fs-text-item">Cylinder</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
-                <div class="fs-item">
+                <div id="fs-cylinderelement"class="fs-item">
                     <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
