--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -29,10 +29,13 @@
             <p>Welcome to our website! Learn how to use our site with our guide.</p>
             <input type="checkbox" id="doNotShow">
             <label for="doNotShow">Don't show this message again</label>
-            <video width="320" height="240" controls>
-                <source src="IntroVideoV2.mp4" type="./pictures/start_page">
-              Your browser does not support the video tag.
-              </video>
+            <div class="video-container">
+                <video id="IntroVideoV2" controls>
+                    <source src="./pictures/start_page/IntroVideoV2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            
         </div>
     </div>
 
